Cleanup, user seed data, colors.

--- a/client/src/lib/colors.scss
+++ b/client/src/lib/colors.scss
@@ -1,14 +1,14 @@
 :root {
   // Main Colors
-  --blue: rgb(10, 73, 117);
-  --blueLight: rgb(45, 151, 239);
-  --orange: rgba(237, 94, 43, 1);
+  --blue: rgba(36, 43, 96, 1);
+  --blueLight: rgba(50, 119, 215, 1);
+  --orange: rgba(238, 115, 86, 1);
   --error: var(--orange);
   --white: rgb(255, 255, 255, 1);
 
   // Greys
   --grey50: rgba(250, 250, 250, 1);
-  --grey100: rgba(245, 245, 245, 1);
+  --grey100: rgb(90, 70, 70);
   --grey200: rgba(238, 238, 238, 1);
   --grey300: rgba(224, 224, 224, 1);
   --grey400: rgba(189, 189, 189, 1);
