--- a/client/src/pages/Schedule/Schedule.scss
+++ b/client/src/pages/Schedule/Schedule.scss
@@ -1,3 +1,21 @@
 .schedule {
   display: flex;
 }
+
+.schedule-head {
+  text-align: center;
+  h1 {
+    font-size: 4rem;
+    font-weight: 100;
+    margin: 0;
+    padding: 20px 0 15px 0;
+  }
+  h2 {
+    color: var(--grey700);
+    font-style: italic;
+    font-weight: 100;
+    font-size: 1.7rem;
+    margin: 0;
+    padding: 0 0 30px 0;
+  }
+}
