--- a/client/src/app/App.scss
+++ b/client/src/app/App.scss
@@ -6,7 +6,12 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   letter-spacing: 0.05em;
   margin: 0;
+}
+
+a {
+  color: var(--blueLight);
+  text-decoration: none;
 }
