--- a/client/src/pages/Schedule/Schedule.scss
+++ b/client/src/pages/Schedule/Schedule.scss
@@ -1,5 +1,7 @@
 .schedule {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .schedule-head {
@@ -17,5 +19,18 @@
     font-size: 1.7rem;
     margin: 0;
     padding: 0 0 30px 0;
+  }
+}
+
+.confirm {
+  .confirm-coach-name {
+    color: var(--grey700);
+    padding-bottom: 1rem;
+    font-size: 2.3rem;
+  }
+
+  .confirm-date {
+    color: var(--grey700);
+    font-size: 1.8rem;
   }
 }
