--- a/client/src/shared/Loading/Loading.scss
+++ b/client/src/shared/Loading/Loading.scss
@@ -1,12 +1,13 @@
 .loading-container {
-  background: rgba(255, 255, 255, 0.3);
-  position: absolute;
+  background: rgba(255, 255, 255, 0.2);
   font-size: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
